fixes scrollbar width

--- a/DSS/less/styleDSS.less
+++ b/DSS/less/styleDSS.less
@@ -96,7 +96,7 @@
 
 /*ScrollBar*/
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 7px;
 
 }
 ::-webkit-scrollbar-thumb {
